# fer-nos

./: .gitignore  CMakeLists.txt  README.md  notes.md
lab1/: a.h  a_car.c  a_compile.sh  a_entry.c  a_run.sh  a_semaphore.c  b.h  b_entry.c  b_process.c  b_run.sh
lab2/: .gitignore  demo.sh  main.py  test.py
lab2/ma_crypto/: digital.py  hash.py  rsa.py  symmetric_ciphers.py
playground/: kirk.c  named_pipe.c  pipe.c  spock.c
